@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,120 +25,160 @@
 package com.oracle.svm.driver;
 
 import java.io.File;
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Queue;
-import java.util.jar.Attributes;
-import java.util.jar.JarFile;
-import java.util.jar.Manifest;
+import java.util.List;
 
-import org.graalvm.compiler.options.OptionType;
-
-import com.oracle.svm.hosted.ImageClassLoader;
+import com.oracle.svm.core.SubstrateOptions;
+import com.oracle.svm.core.option.OptionOrigin;
+import com.oracle.svm.core.option.OptionUtils;
+import com.oracle.svm.driver.NativeImage.ArgumentQueue;
+import com.oracle.svm.hosted.driver.IncludeOptionsSupport;
+import com.oracle.svm.hosted.driver.IncludeOptionsSupport.ExtendedOption;
+import com.oracle.svm.hosted.driver.LayerOptionsSupport.LayerOption;
+import com.oracle.svm.util.LogUtils;
 
 class DefaultOptionHandler extends NativeImage.OptionHandler<NativeImage> {
 
-    static final String helpText = NativeImage.getResource("/Help.txt");
-    static final String helpExtraText = NativeImage.getResource("/HelpExtra.txt");
+    private static final String requireValidJarFileMessage = "-jar requires a valid jarfile";
+    private static final String newStyleClasspathOptionName = "--class-path";
+
+    static final String addModulesOption = "--add-modules";
+    static final String limitModulesOption = "--limit-modules";
+    private static final String moduleSetModifierOptionErrorMessage = " requires modules to be specified";
+
+    static final String ADD_ENV_VAR_OPTION = "-E";
+
+    /* Defunct legacy options that we have to accept to maintain backward compatibility */
+    private static final String noServerOption = "--no-server";
 
     DefaultOptionHandler(NativeImage nativeImage) {
         super(nativeImage);
     }
 
     @Override
-    public boolean consume(Queue<String> args) {
+    public boolean consume(ArgumentQueue args) {
         String headArg = args.peek();
         switch (headArg) {
-            case "--help":
-                args.poll();
-                nativeImage.showMessage(helpText);
-                nativeImage.showNewline();
-                nativeImage.apiOptionHandler.printOptions(nativeImage::showMessage);
-                nativeImage.showNewline();
-                nativeImage.optionRegistry.showOptions(null, true, nativeImage::showMessage);
-                nativeImage.showNewline();
-                System.exit(0);
-                return true;
-            case "--version":
-                args.poll();
-                nativeImage.showMessage("GraalVM Version " + NativeImage.graalvmVersion);
-                System.exit(0);
-                return true;
-            case "--help-extra":
-                args.poll();
-                nativeImage.showMessage(helpExtraText);
-                System.exit(0);
-                return true;
             case "-cp":
             case "-classpath":
-            case "--class-path":
+            case newStyleClasspathOptionName:
                 args.poll();
                 String cpArgs = args.poll();
                 if (cpArgs == null) {
                     NativeImage.showError(headArg + " requires class path specification");
                 }
-                for (String cp : cpArgs.split(File.pathSeparator, Integer.MAX_VALUE)) {
-                    /* Conform to `java` command empty cp entry handling. */
-                    String cpEntry = cp.isEmpty() ? "." : cp;
-                    nativeImage.addCustomImageClasspath(cpEntry);
-                }
+                processClasspathArgs(cpArgs);
                 return true;
-            case "--configurations-path":
+            case "-p":
+            case "--module-path":
                 args.poll();
-                String configPath = args.poll();
-                if (configPath == null) {
-                    NativeImage.showError(headArg + " requires a " + File.pathSeparator + " separated list of directories");
+                String mpArgs = args.poll();
+                if (mpArgs == null) {
+                    NativeImage.showError(headArg + " requires module path specification");
                 }
-                for (String configDir : configPath.split(File.pathSeparator)) {
-                    nativeImage.addMacroOptionRoot(nativeImage.canonicalize(Paths.get(configDir)));
+                processModulePathArgs(mpArgs);
+                return true;
+            case "-m":
+            case "--module":
+                args.poll();
+                String mainClassModuleArg = args.poll();
+                if (mainClassModuleArg == null) {
+                    NativeImage.showError(headArg + " requires module name");
                 }
+                String[] mainClassModuleArgParts = mainClassModuleArg.split("/", 2);
+                if (mainClassModuleArgParts.length > 1) {
+                    nativeImage.addPlainImageBuilderArg(nativeImage.oHClass + mainClassModuleArgParts[1], OptionOrigin.originDriver);
+                }
+                nativeImage.addPlainImageBuilderArg(nativeImage.oHModule + mainClassModuleArgParts[0], OptionOrigin.originDriver);
+                nativeImage.setModuleOptionMode(true);
+                return true;
+            case addModulesOption:
+                args.poll();
+                String addModulesArgs = args.poll();
+                if (addModulesArgs == null) {
+                    NativeImage.showError(headArg + moduleSetModifierOptionErrorMessage);
+                }
+                nativeImage.addAddedModules(addModulesArgs);
+                return true;
+            case limitModulesOption:
+                args.poll();
+                String limitModulesArgs = args.poll();
+                if (limitModulesArgs == null) {
+                    NativeImage.showError(headArg + moduleSetModifierOptionErrorMessage);
+                }
+                nativeImage.addLimitedModules(limitModulesArgs);
                 return true;
             case "-jar":
                 args.poll();
                 String jarFilePathStr = args.poll();
                 if (jarFilePathStr == null) {
-                    NativeImage.showError("-jar requires jar file specification");
+                    NativeImage.showError(requireValidJarFileMessage);
                 }
                 handleJarFileArg(nativeImage.canonicalize(Paths.get(jarFilePathStr)));
                 nativeImage.setJarOptionMode(true);
                 return true;
-            case "--verbose":
+            case "--diagnostics-mode":
                 args.poll();
-                nativeImage.setVerbose(true);
+                nativeImage.enableDiagnostics();
+                nativeImage.addPlainImageBuilderArg("-H:+DiagnosticsMode");
+                nativeImage.addPlainImageBuilderArg("-H:DiagnosticsDir=" + nativeImage.diagnosticsDir);
+                System.out.println("# Diagnostics mode enabled: image-build reports are saved to " + nativeImage.diagnosticsDir);
                 return true;
-            case "--dry-run":
+            case noServerOption:
                 args.poll();
-                nativeImage.setDryRun(true);
+                LogUtils.warning("Ignoring server-mode native-image argument " + headArg + ".");
                 return true;
-            case "--expert-options":
+            case "--enable-preview":
                 args.poll();
-                nativeImage.setQueryOption(OptionType.User.name());
-                return true;
-            case "--expert-options-all":
-                args.poll();
-                nativeImage.setQueryOption("");
+                nativeImage.addCustomJavaArgs("--enable-preview");
                 return true;
         }
 
-        String debugAttach = "--debug-attach";
-        if (headArg.startsWith(debugAttach)) {
-            String debugAttachArg = args.poll();
-            String portSuffix = debugAttachArg.substring(debugAttach.length());
-            int debugPort = 8000;
-            if (!portSuffix.isEmpty()) {
-                try {
-                    debugPort = Integer.parseInt(portSuffix.substring(1));
-                } catch (NumberFormatException e) {
-                    NativeImage.showError("Invalid --debug-attach option: " + debugAttachArg);
-                }
+        String singleArgClasspathPrefix = newStyleClasspathOptionName + "=";
+        if (headArg.startsWith(singleArgClasspathPrefix)) {
+            String cpArgs = args.poll().substring(singleArgClasspathPrefix.length());
+            if (cpArgs.isEmpty()) {
+                NativeImage.showError(headArg + " requires class path specification");
             }
-            nativeImage.addImageBuilderJavaArgs("-Xdebug", "-Xrunjdwp:transport=dt_socket,server=y,address=" + debugPort + ",suspend=y");
+            processClasspathArgs(cpArgs);
             return true;
         }
-
-        if (headArg.startsWith(NativeImage.oH) || headArg.startsWith(NativeImage.oR)) {
+        if (headArg.startsWith(nativeImage.oHLayerCreate)) {
+            String rawLayerCreateValue = headArg.substring(nativeImage.oHLayerCreate.length());
+            if (!rawLayerCreateValue.isEmpty()) {
+                List<String> layerCreateValue = OptionUtils.resolveOptionValuesRedirection(SubstrateOptions.LayerCreate, rawLayerCreateValue, OptionOrigin.from(args.argumentOrigin));
+                LayerOption layerOption = LayerOption.parse(layerCreateValue);
+                for (ExtendedOption option : layerOption.extendedOptions()) {
+                    var packageOptionValue = IncludeOptionsSupport.PackageOptionValue.from(option);
+                    if (packageOptionValue == null) {
+                        continue;
+                    }
+                    String packageName = packageOptionValue.name();
+                    if (packageOptionValue.isWildcard()) {
+                        nativeImage.systemPackagesToModules.forEach((systemPackageName, moduleName) -> {
+                            if (systemPackageName.startsWith(packageName)) {
+                                nativeImage.addAddedModules(moduleName);
+                            }
+                        });
+                    } else {
+                        String moduleName = nativeImage.systemPackagesToModules.get(packageName);
+                        if (moduleName != null) {
+                            nativeImage.addAddedModules(moduleName);
+                        }
+                    }
+                }
+            }
+        }
+        if (headArg.startsWith(NativeImage.oH)) {
             args.poll();
-            nativeImage.addCustomImageBuilderArgs(headArg);
+            nativeImage.addPlainImageBuilderArg(headArg, args.argumentOrigin);
+            return true;
+        }
+        if (headArg.startsWith(NativeImage.oR)) {
+            args.poll();
+            nativeImage.addPlainImageBuilderArg(headArg);
             return true;
         }
         String javaArgsPrefix = "-D";
@@ -158,6 +198,14 @@ class DefaultOptionHandler extends NativeImage.OptionHandler<NativeImage> {
             nativeImage.addOptionKeyValue(keyValue[0], keyValue[1]);
             return true;
         }
+        if (headArg.startsWith(ADD_ENV_VAR_OPTION)) {
+            args.poll();
+            String envVarSetting = headArg.substring(ADD_ENV_VAR_OPTION.length());
+            String[] keyValue = envVarSetting.split("=", 2);
+            String valueDefinedOrInherited = keyValue.length > 1 ? keyValue[1] : null;
+            nativeImage.imageBuilderEnvironment.put(keyValue[0], valueDefinedOrInherited);
+            return true;
+        }
         if (headArg.startsWith("-J")) {
             args.poll();
             if (headArg.equals("-J")) {
@@ -167,56 +215,61 @@ class DefaultOptionHandler extends NativeImage.OptionHandler<NativeImage> {
             }
             return true;
         }
-        String optimizeOption = "-O";
-        if (headArg.startsWith(optimizeOption)) {
+        if (headArg.startsWith(addModulesOption + "=")) {
             args.poll();
-            if (headArg.equals(optimizeOption)) {
-                NativeImage.showError("The " + optimizeOption + " option should not be followed by a space");
-            } else {
-                nativeImage.addPlainImageBuilderArg(nativeImage.oHOptimize + headArg.substring(2));
+            String addModulesArgs = headArg.substring(addModulesOption.length() + 1);
+            if (addModulesArgs.isEmpty()) {
+                NativeImage.showError(headArg + moduleSetModifierOptionErrorMessage);
             }
+            nativeImage.addAddedModules(addModulesArgs);
+            return true;
+        }
+        if (headArg.startsWith(limitModulesOption + "=")) {
+            args.poll();
+            String limitModulesArgs = headArg.substring(limitModulesOption.length() + 1);
+            if (limitModulesArgs.isEmpty()) {
+                NativeImage.showError(headArg + moduleSetModifierOptionErrorMessage);
+            }
+            nativeImage.addLimitedModules(limitModulesArgs);
             return true;
         }
         return false;
     }
 
-    private void handleJarFileArg(Path filePath) {
-        try (JarFile jarFile = new JarFile(filePath.toFile())) {
-            Manifest manifest = jarFile.getManifest();
-            Attributes mainAttributes = manifest.getMainAttributes();
-            String mainClass = mainAttributes.getValue("Main-Class");
-            if (mainClass == null) {
-                NativeImage.showError("No main manifest attribute, in " + filePath);
-            }
-            nativeImage.addPlainImageBuilderArg(nativeImage.oHClass + mainClass);
-            String jarFileName = filePath.getFileName().toString();
-            String jarSuffix = ".jar";
-            String jarFileNameBase;
-            if (jarFileName.endsWith(jarSuffix)) {
-                jarFileNameBase = jarFileName.substring(0, jarFileName.length() - jarSuffix.length());
-            } else {
-                jarFileNameBase = jarFileName;
-            }
-            if (!jarFileNameBase.isEmpty()) {
-                nativeImage.addPlainImageBuilderArg(nativeImage.oHName + jarFileNameBase);
-            }
-            String classPath = mainAttributes.getValue("Class-Path");
-            /* Missing Class-Path Attribute is tolerable */
-            if (classPath != null) {
-                for (String cp : classPath.split(" +")) {
-                    Path manifestClassPath = ImageClassLoader.stringToClasspath(cp);
-                    if (!manifestClassPath.isAbsolute()) {
-                        /* Resolve relative manifestClassPath against directory containing jar */
-                        manifestClassPath = filePath.getParent().resolve(manifestClassPath);
-                    }
-                    nativeImage.addImageProvidedClasspath(manifestClassPath);
-                }
-            }
-            nativeImage.addCustomImageClasspath(filePath);
-        } catch (NativeImage.NativeImageError ex) {
-            throw ex;
-        } catch (Throwable ex) {
-            throw NativeImage.showError("Invalid or corrupt jarfile " + filePath);
+    private void processClasspathArgs(String cpArgs) {
+        for (String cp : cpArgs.split(File.pathSeparator, Integer.MAX_VALUE)) {
+            /* Conform to `java` command empty cp entry handling. */
+            String cpEntry = cp.isEmpty() ? "." : cp;
+            nativeImage.addCustomImageClasspath(cpEntry);
         }
+    }
+
+    private void processModulePathArgs(String mpArgs) {
+        for (String mpEntry : mpArgs.split(File.pathSeparator, Integer.MAX_VALUE)) {
+            nativeImage.addImageModulePath(Paths.get(mpEntry), false, true);
+        }
+    }
+
+    private void handleJarFileArg(Path jarFilePath) {
+        if (Files.isDirectory(jarFilePath)) {
+            NativeImage.showError(jarFilePath + " is a directory. (" + requireValidJarFileMessage + ")");
+        }
+        String jarFileName = jarFilePath.getFileName().toString();
+        String jarSuffix = ".jar";
+        String jarFileNameBase;
+        if (jarFileName.endsWith(jarSuffix)) {
+            jarFileNameBase = jarFileName.substring(0, jarFileName.length() - jarSuffix.length());
+        } else {
+            jarFileNameBase = jarFileName;
+        }
+        if (!jarFileNameBase.isEmpty()) {
+            String origin = "manifest from " + jarFilePath.toUri();
+            nativeImage.addPlainImageBuilderArg(nativeImage.oHName + jarFileNameBase, origin, false);
+        }
+        Path finalFilePath = nativeImage.useBundle() ? nativeImage.bundleSupport.substituteClassPath(jarFilePath) : jarFilePath;
+        if (!NativeImage.processJarManifestMainAttributes(finalFilePath, nativeImage::handleManifestFileAttributes)) {
+            NativeImage.showError("No manifest in " + finalFilePath);
+        }
+        nativeImage.addCustomImageClasspath(finalFilePath);
     }
 }
